[project]
name = "dynamic_tagloader"
description = "A versatile ComfyUI extension for dynamic tag loading and workflow automation."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# ComfyUI_Dynamic_TagLoader Requirements", "#", "# 這個專案是 ComfyUI 的自定義節點，主要依賴於 ComfyUI 的環境。", "# ComfyUI 通常已經包含了所有必要的依賴項，如 torch, torchvision, aiohttp 等。", "#", "# 如果您的 ComfyUI 安裝缺少某些依賴，可以考慮安裝以下包：", "# (請檢查您的 ComfyUI 版本和安裝方式)", "# 可選依賴 (如果 ComfyUI 沒有包含)", "# aiohttp>=3.8.0", "# 注意：請勿直接安裝此文件，除非您確定需要。", "# 通常只需要將此節點放入 ComfyUI/custom_nodes/ 目錄即可使用。"]

[project.urls]
Repository = "https://github.com/NineKey1028/ComfyUI_Dynamic_TagLoader"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/NineKey1028/ComfyUI_Dynamic_TagLoader/wiki"
"Bug Tracker" = "https://github.com/NineKey1028/ComfyUI_Dynamic_TagLoader/issues"

[tool.comfy]
PublisherId = "ninekey1028"
DisplayName = "ComfyUI_Dynamic_TagLoader"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

